[package]
name = "FileDbClient"
version = "0.1.0"
authors = ["Vishwa <vishwa.kapoor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.59"
uuid = { version = "0.8", features = ["serde", "v4"] }
